<resources>
    <string name="app_name">Test Application</string>
    <string name="enter_your_message">Enter Your Message</string>
    <string name="send_message">Send Message</string>
    <string name="button">Button</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_address">Enter Address</string>
    <string name="result_no_found">Result no Found</string>
    <string name="slide_a">Slide A</string>
    <string name="slide_b">Slide B</string>
    <string name="recycler_view">Recycler View</string>
    <string name="share">Share</string>
    <string name="title">title</string>
    <string name="invalid">Invalid</string>
</resources>
