<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context="Activities.MainActivity">


    <EditText
        android:id="@+id/edtname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name"
        />

    <EditText
        android:id="@+id/edtpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"/>

    <EditText
        android:id="@+id/edtemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email"/>

    <EditText
        android:id="@+id/edtAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_address"
        />
    <Button
        android:id="@+id/SendBtntoNextActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_message"/>

    <Button
        android:id="@+id/sharebtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share" />

    <Button
        android:id="@+id/btn_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recycler_view" />
</LinearLayout>